# polyconstruct

./: .gitignore  .gitmodules  .readthedocs.yaml  LICENSE  README.ipynb  README.md  README.txt  README_Setup.txt  README_worked-examples.ipynb  README_worked-examples.md  configuration.txt  paper_worked_examples.ipynb  pyproject.toml  requirements.txt
.github/: CODEOWNERS
PNIPAM_example_validation/: PolyConf_build.py  PolyTop_build.py  eq_1fs.mdp  eq_2fs.mdp  minimise.mdp  nvt_300.mdp  prod_run.mdp
PNIPAM_example_validation/monomers/: UNK_460A12_PolyTop.itp
PNIPAM_example_validation/polymers/: 30mer.itp
data_paper_examples/: PEG_star_arms.itp  PEG_star_backbone.itp  ethanol.itp  ethylamine.itp  ethylamine_dendrimer.itp  ethylamine_dendrimer.json  ethylene_glycol.itp  ethylenediamine.itp  extended_methane.itp  four_arm_star.itp  four_arm_star.json  four_arm_star_overlapped_monomers.itp  four_arm_star_overlapped_monomers.json  methane.itp  neopentane.itp  pei_linear_polymer.itp  pei_linear_polymer.json  polyester.itp  propanol.itp  six_arm_star.itp  six_arm_star.json  six_arm_star_monomer_build.itp  six_arm_star_monomer_build.json  terephthalic_acid.itp
docs/: CODEOWNERS  Makefile  README.md  requirements.yaml
docs/source/: api.rst  conf.py  getting_started.rst  index.rst  modules.rst  polybuild.rst  polyconf.Monomer.rst  polyconf.PDB.rst  polyconf.Polymer.rst  polyconf.polyconf_automatic.rst  polyconf.rst  polytop.Angles.rst  polytop.Atoms.rst  polytop.Bonds.rst  polytop.Dihedrals.rst  polytop.Exclusions.rst  polytop.Gromacs.rst  polytop.Junction.rst  polytop.Molecule_type.rst  polytop.Monomer.rst  polytop.Pairs.rst  polytop.Polymer.rst  polytop.Topology.rst  polytop.Visualize.rst  polytop.polytop_automatic.rst  polytop.rst
docs/source/polyconstruct-sphinx-theme/: MANIFEST.in  README.md  pyproject.toml  setup.py
docs/source/polyconstruct-sphinx-theme/docs/: conf.py  environment.yml  index.rst
docs/source/polyconstruct-sphinx-theme/polyconstruct_sphinx_theme/: __init__.py  authors.py
package/: setup.py
package/polytop/: ITP.py  __init__.py  angles.py  atoms.py  dihedrals.py  gromacs.py  pairs.py  polymerization_type.py  topology.py
polybuild/: pyproject.toml  setup.py
polybuild/RTP_entries/: EBPB.rtp  ELPR.rtp  PEMD.rtp
polybuild/polybuild/: ITP2RTP.py  RTPcharge.py  __init__.py
polybuild_examples/: readme.MD
polybuild_examples/RTP_entries/: ELNR.rtp  ELPS.rtp  EPBP.rtp  PEAD.rtp  PNIPAM_monomer.rtp
polyconf/: build_PEI_linear.py  polymer_01_vanilla-extend.gro  polymer_02_simple-linear-extend.gro  polymer_04_shuffled.gro  pyproject.toml  setup.py
polyconf/polyconf/: Monomer.py  PDB.py  POLYRAW  Polymer.py  __init__.py  monomer.py  polyconf_automatic.py  polymer.py  polymer_1.gro  polymer_2.gro  polymer_3.gro  polymer_linear.gro
polyconf_examples/: 01_build_PEI_linear.py  01a_build_PEI_with_extend.py  01b_build_PEI_with_linear_extend.py  01c_build_PEI_then_solve.py  01d_build_PEI_conformation.py  01e_build_PEI_conformation_ensemble.py  02a_build_PMMA_isotactic.py  02b_build_PMMA_syndiotactic.py  02c_build_PMMA_atactic.py  02d_build_PMMA_atactic_with_linear_extend.py  03_build_branched_PEI.py  04_build_randomly_branched_PEI.py  README.md  build_PEI_linear.py  build_PMMA.py  build_PMMA_01-isotactic.py  build_PMMA_02-syndiotactic.py  build_PMMA_03-atactic.py
polytop/: ITP.py  __init__.py  angles.py  atoms.py  bonds.py  concat.bat  concatenated_elements.txt  concatenated_elements2.txt  concatenated_elements3.txt  concatenated_tests.txt  concatenated_tests2.txt  concatenated_topologies.txt  concatenated_topologies2.txt  concatenated_visualizations.txt  dihedrals.py  exclusions.py  junction.py  molecule.py  molecule_type.py  monomer.py  pairs.py  polymer.py  pyproject.toml  setup.cfg  setup.py  topology.py  visualize.py
polytop/polytop/: Angles.py  Atoms.py  Bonds.py  Dihedrals.py  Exclusions.py  Gromacs.py  ITP.py  Junction.py  Molecule.py  Molecule_type.py  Monomer.py  Pairs.py  Polymer.py  Topology.py  Visualize.py  __init__.py  angles.py  atoms.py  bonds.py  dihedrals.py  junction.py  monomer.py  pairs.py  polymer.py  polytop_automatic.py  topology.py  visualize.py
polytop_examples/: README.md  dendrimer_ethylamine.py  linear_PEI.py  star_PEG.py
polytop_examples/data/: dendrimer_bifurcating.itp  dendrimer_core.itp  dendrimer_terminal.itp  ethylamine_dendrimer.json  extended_ethanol.itp  extended_neopentane.itp  four_arm_star.itp  four_arm_star.json  four_arm_star_overlapped_monomers.itp  four_arm_star_overlapped_monomers.json  pei.itp  pei_linear_polymer.itp  pei_linear_polymer.json
star_polymer_validation/: build_itp.py  build_pdb.py
star_polymer_validation/monomers/: extended_ethanol.itp  extended_methane.itp  extended_neopentane.itp
star_polymer_validation/polymers/: star_polymer.itp  star_polymer.json
tests/: conftest.py  test_angles.py  test_atoms.py  test_bonds.py  test_dihedrals.py  test_gromacs.py  test_junctions.py  test_loadITP.py  test_moleculetype.py  test_monomer.py  test_polymer.py  test_polymerization_type.py  test_topology.py  test_visualize.py
tests/data/: AMBER_PNIPAM_extend.itp  AMBER_pnipam_GMX.itp  CHARMM_PNIPAM_extend.itp  CHARMM_pnipam_gmx.itp  OPLS_UNK_460A12.itp  PH1.itp  ethylene_terephthalate.itp  glucose.itp  glucose_badname.itp  glucose_badtype.itp  glucose_faulty.itp  glucose_numeric_oxygens.itp  invalid_section.itp
tests/polyconf/: test_PDB.py  test_data.py  test_import.py  test_monomer.py  test_polyconf_automatic.py  test_polymer.py
tests/polytop/: test_angles.py  test_atoms.py  test_bonds.py  test_data.py  test_dihedrals.py  test_gromacs.py  test_junctions.py  test_moleculetype.py  test_monomer.py  test_polymer.py  test_polymerization_type.py  test_topology.py  test_visualize.py
tests/samples/: angle.json  (+20 more)
validation_simulations/: 4_arm_PEG_PolyTop.itp  4_arm_PEG_PolyTop.top  MD_production_run.mdp  PEI_hyperbranched_PolyBuild.top  readme.MD
(+43 files in other folders)
