[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "polybuild"
version = "1.0"
authors = [{name = "Rangika Ruwan Kumara Wijeweera Munaweera", email = "r.munaweera@uq.edu.au"}, ]
license = { text = "MIT License" }

dependencies = [
    "numpy"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[project.scripts]
ITP2RTP = "polybuild.ITP2RTP:main"
RTPcharge = "polybuild.RTPcharge:main"