[build-system]
# XXX: If your project needs other packages to build properly, add them to this list.
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "polyconf"
version = "1.0"
authors = [{name = "Ada Quinn and Luna Morrow", email = "uqlmorro@uq.edu.au"}, ]
dynamic = ["dependencies"]
requires-python = "==3.10"

[project.scripts]
polyconf-automatic = "polyconf.polyconf_automatic:main"