[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "polyconf"
version = "1.0"
authors = [{name = "Ada Quinn and Luna Morrow", email = "uqlmorro@uq.edu.au"}, ]
# requires-python = "==3.10"
license = { text = "MIT License" }

# Dependencies required for your project
dependencies = [
    "numpy",
    "mdanalysis",
    "click",
    "py3Dmol",
    "rdkit",
    "networkx",
    "pandas",
    "tqdm"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[project.scripts]
polyconf-automatic = "polyconf.polyconf_automatic:main"